# python-string-extractor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/python_string_extractor/: extractor.py
tests/: test_extractor.py
